[gd_scene load_steps=5 format=3 uid="uid://ba3skd3ynab02"]

[ext_resource type="Script" path="res://SimplAttackRespawn/enemy.gd" id="1_vbsrb"]
[ext_resource type="Texture2D" uid="uid://4clvfc006fpu" path="res://icon.svg" id="2_rycqs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vb5j5"]
size = Vector2(132, 131)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uexu0"]
size = Vector2(137, 135.5)

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_vbsrb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_vb5j5")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.851229, 0.156873, 0, 1)
texture = ExtResource("2_rycqs")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(-0.5, -0.75)
shape = SubResource("RectangleShape2D_uexu0")

[node name="AttackCooldown" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
